--- a/style.css
+++ b/style.css
@@ -53,12 +53,15 @@ body {
 }
 #display {
     display: flex;
-    justify-content: center;
+    flex-flow: row nowrap;
+    justify-content:right;
     align-items: center;
-    min-width: 260px;
+    min-width: 230px;
     min-height: 90px;   
     background-color: #eeeeee80;
     border-radius: 25%;
+    padding: 0px 20px 0px 20px;
+
 }
 button {
     display: flex;
@@ -79,6 +82,25 @@ button {
     flex-flow: row nowrap;
 
 }
+#soundbtn.soundbtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 120px;
+    max-height: 25px;
+    min-height: 0;
+    min-width: 0;
+    height: fit-content;
+    border: 2px solid #00ADB5;
+    border-radius: 25%;
+    padding: 4px;
+    margin: 0;
+    margin-bottom: 10px;
+    font-family: Arial;
+    font-weight: bolder;
+    font-size: 12px;
+}
+
 
 
 /* Color Palettes
